--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -1,10 +1,66 @@
 <!DOCTYPE html>
-<html xmlns: th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="utf-8">
-<title>Insert title here</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="imagens/logoEstetilLab.jpg alt=">
+    <title>EstetiLab - MVC</title>
 </head>
+
 <body>
-	
+<div class="navbar">
+ <div>
+    <h1>EstetiLab</h1>  
+ </div>
+ <div>
+     <img class="logo" src="imagens/logoEstetilLab.jpg" alt="">
+ </div>
+ </div>
+    <div th:fragment="navbar" class="navbar navbar-expand-md navbar-dark bg-dark">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/">Cadastro</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina2">Clientes</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina3">Agendamentos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Prontuário</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Atendimento</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Procedimentos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Produtos Home Care</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Relatórios</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
+
 </html>
