Menu com bootstrap e css personalizado.

--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -10,13 +10,14 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="stylesheet" href="imagens/logoEstetilLab.jpg alt=">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
     <title>EstetiLab - MVC</title>
 </head>
 
 <body>
 <div class="navbar">
  <div>
-    <h1>EstetiLab</h1>  
+    <h1>Esteti<span class="letra">L</span>ab</h1>  
  </div>
  <div>
      <img class="logo" src="imagens/logoEstetilLab.jpg" alt="">
@@ -29,28 +30,28 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/">Cadastro</a>
+                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/">Cadastro</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina2">Clientes</a>
+                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina2">Clientes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina3">Agendamentos</a>
+                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina3">Agendamentos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Prontuário</a>
+                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Prontuário</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Atendimento</a>
+                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Atendimento</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Procedimentos</a>
+                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Procedimentos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Produtos Home Care</a>
+                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-1" href="/pagina4">Relatórios</a>
+                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Relatórios</a>
                 </li>
             </ul>
         </div>
