--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -15,48 +15,49 @@
 </head>
 
 <body>
-<div class="navbar">
- <div>
-    <h1> Esteti<span class="letra">L</span>ab</h1>  
- </div>
- <div>
-     <img class="logo" src="imagens/logoEstetilLab.jpg" alt="">
- </div>
- </div>
-    <div th:fragment="navbar" class="navbar navbar-expand-md navbar-dark bg-dark">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <nav th:fragment="navbar">
+        <div class="navbar">
+            <div>
+                <h1>Esteti<span class="letra">L</span>ab</h1>
+            </div>
+            <div>
+                <img class="logo" src="imagens/logoEstetilLab.jpg" alt="">
+            </div>
+        </div>
+        <div class="navbar navbar-expand-md navbar-dark bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/">Cadastro</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina2">Clientes</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina3">Agendamentos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Prontuário</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Atendimento</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Procedimentos</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Relatórios</a>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/">Cadastro</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina2">Clientes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina3">Agendamentos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Prontuário</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Atendimento</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Procedimentos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Relatórios</a>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
-
+    </nav>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
