--- a/estetilab/src/main/resources/templates/fragments/footer.html
+++ b/estetilab/src/main/resources/templates/fragments/footer.html
@@ -3,8 +3,29 @@
 <head>
 <meta charset="utf-8">
 <title>Insert title here</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+<div th:fragment="rodape" >
+	  <footer class="footer modal-footer ">
+            <div class="col-md-4">
+                <p>Deenvolvido por:</p>
+                <ul>
+                    <li>Gustavo Luiz Dutra Santos</li>
+                    <li>Hugo Moreira Coelho Pacheco</li>
+                    <li>Tulio Cesar Gontijo</li>
+                    <li>Vitor Braga Ferreira</li>
 
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <p>®Todos os direitos reservados</p>
+            </div>
+            <div class="col-md-4">
+                <p>Tecnologia em Sistemas para Internet - IFTM - Campus Uberlandia Centro</p>
+            </div>
+        </footer>
+</div>
 </body>
 </html>
