--- a/estetilab/src/main/resources/templates/index.html
+++ b/estetilab/src/main/resources/templates/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html xmlns: th="http://www.thymeleaf.org">
-<head>
-<meta charset="utf-8">
-<title>EstetiLab</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org" th:include="fragments/modelo :: modelo">
 <body>
+
+	<div th:fragment="conteudo">
+		<div>
+			teste
+		</div>
+
+	</div>
+
 </body>
 </html>
