--- a/estetilab/bin/src/main/resources/templates/fragments/footer.html
+++ b/estetilab/bin/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Insert title here</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-<link rel="stylesheet" href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 <div th:fragment="rodape" >
