--- a/estetilab/src/main/resources/templates/index.html
+++ b/estetilab/src/main/resources/templates/index.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org" th:include="fragments/modelo :: modelo">
 <body>
 
-	<div th:fragment="conteudo">
+	<main th:fragment="conteudo">
 		<div>
 			teste
 		</div>
 
-	</div>
+	</main>
 
 </body>
 </html>
