Adição das páginas referentes ao CRUD-Procedimentos

--- a/estetilab/src/main/resources/templates/fragments/modelo.html
+++ b/estetilab/src/main/resources/templates/fragments/modelo.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 <!-- CSS hospedado no Google Drive -->
 <link rel="stylesheet" href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
+<link rel="icon" href="https://docs.google.com/uc?id=114kmRIx943doVjZGPtfFlcuGZqx1EQ8j"/>
 <title>EstetiLab</title>
 </head>
 
