--- a/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
+++ b/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
@@ -63,9 +63,52 @@
     </nav>
 
 	<main>
-		<div>
-			teste
-		</div>
+		<div class="container-fluid">
+            <div class="row">
+                <div class="col-7">
+                    <h3 class="m-3">Lista de Procedimentos</h3>
+                </div>
+                <div class="col-5">
+                    <form class="ml-5">
+                        <input type="button" value="Adicionar Procedimento" class="m-3 p-2">
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 01</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 02</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 03</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 04</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 05</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 06</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 07</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 08</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 09</p>
+            </div></a>
+            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+                <p class="text-white p-2 m-0">Procedimento 10</p>
+            </div></a>
+        </div>
+        
 	</main>
 
 	<footer class="footer modal-footer ">
