footer centralizado. Nomes em ordem alfabética.

--- a/estetilab/src/main/resources/templates/fragments/footer.html
+++ b/estetilab/src/main/resources/templates/fragments/footer.html
@@ -7,25 +7,26 @@
 <link rel="stylesheet" href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
 </head>
 <body>
-<div th:fragment="rodape" >
-	  <footer class="footer modal-footer ">
-            <div class="col-md-4">
-                <p>Deenvolvido por:</p>
-                <ul>
-                    <li>Gustavo Luiz Dutra Santos</li>
-                    <li>Hugo Moreira Coelho Pacheco</li>
-                    <li>Tulio Cesar Gontijo</li>
-                    <li>Vitor Braga Ferreira</li>
-
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <p>®Todos os direitos reservados</p>
-            </div>
-            <div class="col-md-4">
-                <p>Tecnologia em Sistemas para Internet - IFTM - Campus Uberlandia Centro</p>
+<div th:fragment="rodape">
+        <footer class="footer modal-footer">
+            <div class="footer">
+                <div class="col-md-4">
+                    <p>Desenvolvido por:</p>
+                    <ul>
+                        <li>Gustavo Luiz Dutra Santos</li>
+                        <li>Hugo Moreira Coelho Pacheco</li>
+                        <li>Tulio Cesar Gontijo</li>
+                        <li>Vitor Braga Ferreira</li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <p>®Todos os direitos reservados</p>
+                </div>
+                <div class="col-md-4">
+                    <p>Tecnologia em Sistemas para Internet - IFTM - Campus Uberlandia Centro</p>
+                </div>
             </div>
         </footer>
-</div>
+    </div>
 </body>
 </html>
