responsividade do menu

--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-        <nav th:fragment="navbar">
+            <nav th:fragment="navbar">
         <div class="navbar">
             <div>
                 <h1>Esteti<span class="letra">L</span>ab</h1>
@@ -53,8 +53,8 @@
                     <li class="nav-item">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
                     </li>
-                    <li class="dropdown nav-link navbar-nav ">
-                        <button class="dropdown-toggle mr-auto nav-item dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <li class="navbar-collapse dropdown nav-link navbar-nav mr-auto">
+                        <button class="dropdown-toggle nav-item dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Relatórios
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
