--- a/estetilab/src/main/resources/templates/fragments/modelo.html
+++ b/estetilab/src/main/resources/templates/fragments/modelo.html
@@ -2,38 +2,195 @@
 <html xmlns:th="http://www.thymeleaf.org" th:fragment="modelo">
 
 <head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-<!-- CSS hospedado no Google Drive -->
-<link rel="stylesheet" href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
-<link rel="icon" href="https://docs.google.com/uc?id=114kmRIx943doVjZGPtfFlcuGZqx1EQ8j"/>
-<title>EstetiLab</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- CSS hospedado no Google Drive -->
+    <link rel="stylesheet" href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
+    <link rel="icon" href="https://docs.google.com/uc?id=114kmRIx943doVjZGPtfFlcuGZqx1EQ8j" />
+    <title>EstetiLab</title>
+    <style>
+        /* header */
+        
+        * {
+            box-sizing: border-box;
+            margin: 0px;
+        }
+        
+        .dropdown-toggle::after {
+            display: inline-block;
+            margin-left: 0.255em;
+            vertical-align: 5px;
+            content: "";
+        }
+        
+        .dropdown-item.active,
+        .dropdown-item:active {
+            color: #fff;
+            text-decoration: none;
+            background-color: #FCA9FF;
+        }
+        
+        .btn-rosa {
+            color: #fff;
+            background-color: #FCA9FF;
+            border-color: #FCA9FF;
+        }
+        
+        .rosa:hover {
+            color: #fff;
+            background-color: #FCA9FF;
+            border-color: #F98CFF;
+        }
+        
+        .rosa:focus,
+        .rosa.focus {
+            color: #fff;
+            background-color: #FCA9FF;
+            border-color: #F98CFF;
+            box-shadow: 0 0 0 0.2rem rgba(249, 140, 255, 1);
+        }
+        
+        .rosa.disabled,
+        .rosa:disabled {
+            color: #fff;
+            background-color: #FCA9FF;
+            border-color: #FCA9FF;
+        }
+        
+        .rosa:not(:disabled):not(.disabled):active,
+        .rosa:not(:disabled):not(.disabled).active,
+        .show>.rosa.dropdown-toggle {
+            color: #fff;
+            background-color: #F98CFF;
+            border-color: #FCA9FF;
+        }
+        
+        .rosa:not(:disabled):not(.disabled):active:focus,
+        .rosa:not(:disabled):not(.disabled).active:focus,
+        .show>.rosa.dropdown-toggle:focus {
+            box-shadow: 0 0 0 0.2rem rgba(249, 140, 255, 1);
+        }
+        
+        .navbar-toggler {
+            /* padding: 0.25rem 0.75rem; */
+            font-size: 1.25rem;
+            line-height: 1;
+            background-color: transparent;
+            border: 1px solid transparent;
+            /* border-radius: 0.25rem; */
+        }
+        
+        h1 {
+            font-size: 80px;
+            color: #363435;
+            margin-left: 40px;
+        }
+        
+        h1::first-letter {
+            font-size: 150px;
+            font-weight: bold;
+            text-shadow: #575668 3px 3px 2px;
+            font-family: 'Noto Serif', serif;
+        }
+        
+        body {
+            background-color: #fbdad0;
+        }
+        
+        .logo {
+            width: 200px;
+            position: relative;
+            left: 0%;
+            top: 50%;
+            padding: 0px;
+        }
+        
+        a:link,
+        a:visited {
+            list-style: none;
+            text-decoration: none;
+            font-size: 18px;
+            color: #575668;
+            padding: 10px;
+            /* margin: 0px; */
+            text-shadow: #575668 1px 1px 2px;
+        }
+        
+        a:hover {
+            background-color: #fc7a7a;
+            color: #575668;
+            text-shadow: #575668 1px 1px 2px;
+        }
+        
+        .letra {
+            font-family: 'Noto Serif', serif;
+        }
+        /* main */
+        
+        .carousel-inner {
+            position: relative;
+            width: 100%;
+            overflow: hidden;
+            text-align: center;
+        }
+        /* footer */
+        
+        footer p {
+            color: white;
+            background-color: #363435;
+        }
+        
+        li {
+            list-style: none;
+            text-decoration: none;
+            font-size: 16px;
+            color: white;
+            padding: 10px 10px;
+            margin: 0px;
+        }
+        
+        .footer {
+            background-color: #363435;
+            position: relative;
+            margin-left: auto;
+            margin-right: auto;
+            display: -ms-flexbox;
+            display: flex;
+            -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+            -ms-flex-align: center;
+            align-items: center;
+            -ms-flex-pack: justify;
+            justify-content: space-between;
+            padding: 15px;
+        }
+    </style>
+
 </head>
 
 
 <body>
 
-	<!-- Início do conteúdo da página -->
-	
-	<nav th:replace="fragments/navbar :: navbar"></nav>
+    <!-- Início do conteúdo da página -->
 
-	<main th:replace="this :: conteudo"></main>
+    <nav th:replace="fragments/navbar :: navbar"></nav>
 
-	<footer th:replace="fragments/footer :: footer"></footer>
+    <main th:replace="this :: conteudo"></main>
 
-	<!-- Fim do conteúdo da página -->
+    <footer th:replace="fragments/footer :: footer"></footer>
 
-
+    <!-- Fim do conteúdo da página -->
 
 
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 
 </html>
