index funcionando com ajuste na font. Footer letra menor.

--- a/estetilab/src/main/resources/templates/fragments/footer.html
+++ b/estetilab/src/main/resources/templates/fragments/footer.html
@@ -23,7 +23,7 @@
                     <p>®Todos os direitos reservados</p>
                 </div>
                 <div class="col-md-4">
-                    <p>Tecnologia em Sistemas para Internet - IFTM - Campus Uberlandia Centro</p>
+                    <p>Tecnologia em Sistemas para Internet - IFTM Campus Uberlandia Centro</p>
                 </div>
             </div>
         </footer>
