--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -54,7 +54,7 @@
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
                     </li>
                     <li class="navbar-collapse dropdown nav-link navbar-nav mr-auto">
-                        <button class="dropdown-toggle nav-item dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="dropdown-toggle nav-item dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0 fontSize" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Relatórios
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
