--- a/estetilab/src/main/resources/templates/fragments/modelo.html
+++ b/estetilab/src/main/resources/templates/fragments/modelo.html
@@ -3,8 +3,7 @@
 
 <head>
 <meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- google fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
 <!-- Bootstrap CSS -->
@@ -17,6 +16,8 @@
 	href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
 <link rel="icon"
 	href="https://docs.google.com/uc?id=114kmRIx943doVjZGPtfFlcuGZqx1EQ8j" />
+<!-- imagens hospedadas no drive -->
+<link rel="stylesheet" href="/navbar/imagens/logoEstetilLab.jpg">
 <title>EstetiLab</title>
 <style>
 /* header */
