--- a/estetilab/src/main/resources/templates/fragments/modelo.html
+++ b/estetilab/src/main/resources/templates/fragments/modelo.html
@@ -7,17 +7,14 @@
 <!-- google fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@700&display=swap" rel="stylesheet">
 <!-- Bootstrap CSS -->
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 	integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
 	crossorigin="anonymous">
 <!-- CSS hospedado no Google Drive -->
-<link rel="stylesheet"
-	href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
-<link rel="icon"
-	href="https://docs.google.com/uc?id=114kmRIx943doVjZGPtfFlcuGZqx1EQ8j" />
+<link rel="stylesheet" href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
+<link rel="icon" href="https://docs.google.com/uc?id=114kmRIx943doVjZGPtfFlcuGZqx1EQ8j" />
 <!-- imagens hospedadas no drive -->
-<link rel="stylesheet" href="/navbar/imagens/logoEstetilLab.jpg">
+<link rel="stylesheet" href="https://drive.google.com/drive/folders/1fWJx6UNzwr3_oPGFOsPZiZmzbwVx4-ha">
 <title>EstetiLab</title>
 <style>
 /* header */
