--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -20,7 +20,7 @@
                 <h1>Esteti<span class="letra">L</span>ab</h1>
             </div>
             <div>
-                <img class="logo" src="/navbar/imagens/logoEstetilLab.jpg" alt="">
+                <img class="logo" src="https://drive.google.com/drive/folders/1fWJx6UNzwr3_oPGFOsPZiZmzbwVx4-ha/logoEstetilLab.jpg" alt="">
             </div>
         </div>
         <div class="navbar navbar-expand-md navbar-dark bg-dark">
