--- a/estetilab/src/main/resources/templates/index.html
+++ b/estetilab/src/main/resources/templates/index.html
@@ -8,17 +8,17 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-25 logo" src="/navbar/imagens/homecare1.jpg" alt="Produtos para o rosto">
+                    <img class="d-block w-25 logo" src="https://docs.google.com/uc?id=1gkYckS_KTpbA3WETNLTBgOY6li_qlK1R" alt="Produtos para o rosto">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-25 logo" src="/navbar/imagens/homecare2.jpg" alt="Produtos para o corpo">
+                    <img class="d-block w-25 logo" src="https://docs.google.com/uc?id=1CFPWoa7gAPCRSDbfp5ffqxXnvRes87wv" alt="Produtos para o corpo">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-25 logo" src="/navbar/imagens/homecare3.jpg" alt="Produtos para o cabelo">
+                    <img class="d-block w-25 logo" src="https://docs.google.com/uc?id=1GfrYKQIrkJoXDPgAC4fl9UUoTW0FWJMR" alt="Produtos para o cabelo">
                 </div>
             </div>
         </div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, itaque nostrum ad quasi placeat similique laborum aliquam nulla ratione maiores iure, consequatur at fugiat vero blanditiis sequi consequuntur odit omnis. Fugit, placeat cum repellendus
+        <p class="paragrafoMain">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, itaque nostrum ad quasi placeat similique laborum aliquam nulla ratione maiores iure, consequatur at fugiat vero blanditiis sequi consequuntur odit omnis. Fugit, placeat cum repellendus
             maiores perferendis voluptatibus quod commodi beatae? Impedit, doloremque. Error alias, temporibus porro sit illum doloribus quis illo molestias, tempore voluptatem accusantium consectetur veniam? Esse, atque facilis. Delectus a laboriosam
             repellat porro deserunt, suscipit illo, ipsum nisi voluptatibus minus ea rerum odio inventore natus dolor. Aliquam sint aut temporibus sit doloribus eius eos, molestiae perspiciatis explicabo consequatur!
         </p>
