Alterações CRUD - Procedimentos e Controlador

--- a/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
+++ b/estetilab/src/main/resources/templates/CRUD-procedimentos/read.html
@@ -1,74 +1,14 @@
-
 <!DOCTYPE html>
-<html>
-
-<head>
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-<!-- CSS hospedado no Google Drive -->
-<link rel="stylesheet" href="https://docs.google.com/uc?id=1YHpawIm7WQlHXRhMzQ65cRhEXg-Q9GRa">
-<title>EstetiLab</title>
-</head>
-
-
+<html xmlns:th="http://www.thymeleaf.org" th:include="fragments/modelo :: modelo">
 <body>
 
-	<!-- Início do conteúdo da página -->
-	
-	<nav>
-        <div class="navbar">
-            <div>
-                <a href="/"><h1>Esteti<span class="letra">L</span>ab</h1>
-            </a></div>
-            <div>
-                <img class="logo" src="https://docs.google.com/uc?id=1iS38P_pYtBvChx2QYeG0wAz40Owc0IgB" alt="">
-            </div>
-        </div>
-        <div class="navbar navbar-expand-md navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="">Cadastro</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="">Clientes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="">Agendamentos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="">Prontuário</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="">Atendimento</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/procedimentos">Procedimentos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="">Produtos Home Care</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="">Relatórios</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-	<main>
+    <main th:fragment="conteudo">
 		<div class="container-fluid">
             <div class="row">
-                <div class="col-7">
+                <div class="col-9">
                     <h3 class="m-3">Lista de Procedimentos</h3>
                 </div>
-                <div class="col-5">
+                <div class="col-3">
                     <form class="ml-5">
                         <input type="button" value="Adicionar Procedimento" class="m-3 p-2">
                     </form>
@@ -77,69 +17,38 @@
         </div>
 
         <div class="container-fluid">
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 01</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 02</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 03</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 04</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 05</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 06</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 07</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 08</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 09</p>
             </div></a>
-            <a href=""><div class="row bg-secondary rounded my-2 mx-2">
+            <a href=""><div class="btn row bg-secondary rounded my-2 mx-2 w-100">
                 <p class="text-white p-2 m-0">Procedimento 10</p>
             </div></a>
         </div>
         
 	</main>
-
-	<footer class="footer modal-footer ">
-            <div class="col-md-4">
-                <p>Deenvolvido por:</p>
-                <ul>
-                    <li>Gustavo Luiz Dutra Santos</li>
-                    <li>Hugo Moreira Coelho Pacheco</li>
-                    <li>Tulio Cesar Gontijo</li>
-                    <li>Vitor Braga Ferreira</li>
-
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <p>®Todos os direitos reservados</p>
-            </div>
-            <div class="col-md-4">
-                <p>Tecnologia em Sistemas para Internet - IFTM - Campus Uberlandia Centro</p>
-            </div>
-        </footer>
-
-	<!-- Fim do conteúdo da página -->
-
-
-
-
-	<!-- Optional JavaScript -->
-	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
-
 </html>
