--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -28,33 +28,33 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
+              <ul class="navbar-nav mr-auto">
+                    <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina1">Cadastro</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina2">Clientes</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina3">Agendamentos</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Prontuário</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Atendimento</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Procedimentos</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
                     </li>
                     <li class="navbar-collapse dropdown nav-link navbar-nav mr-auto">
-                        <button class="dropdown-toggle nav-item dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0 fontSize" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <button class="dropdown-toggle dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0 letra fontSize" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Relatórios
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -65,7 +65,6 @@
                             <a class="dropdown-item" href="#">Auditoria</a>
                         </div>
                     </li>
-
                 </ul>
             </div>
         </div>
