--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -17,7 +17,7 @@
             <nav th:fragment="navbar">
         <div class="navbar">
             <div>
-                <h1>Esteti<span class="letra">L</span>ab</h1>
+                <h1 navH1>Esteti<span class="letra">L</span>ab</h1>
             </div>
             <div>
                 <img class="logo" src="https://docs.google.com/uc?id=1iS38P_pYtBvChx2QYeG0wAz40Owc0IgB" alt="">
