--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -14,13 +14,13 @@
 </head>
 
 <body>
-     <nav th:fragment="navbar">
+            <nav th:fragment="navbar">
         <div class="navbar">
             <div>
-                <h1 class="navH1">Esteti<span class="letra">L</span>ab</h1>
+                <h1 class="navH1"navH1>Esteti<span class="letra">L</span>ab</h1>
             </div>
             <div>
-                <img class="logo" src="/navbar/imagens/logoEstetilLab.jpg" alt="">
+                <img class="logo" src="https://docs.google.com/uc?id=1iS38P_pYtBvChx2QYeG0wAz40Owc0IgB" alt="">
             </div>
         </div>
         <div class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -28,7 +28,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
+              <ul class="navbar-nav mr-auto">
                     <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/">Home</a>
                     </li>
