borda do droopdown

--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -53,7 +53,7 @@
                     <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
                     </li>
-                    <li class="navbar-collapse dropdown nav-link navbar-nav mr-auto">
+                    <li class="navbar-collapse dropdown nav-link navbar-nav mr-auto rosa">
                         <button class="dropdown-toggle dropdown-item nav-item nav-link btn rosa btn-lg text-white m-0 letra fontSize" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Relatórios
                         </button>
