link nav Procedimentos

--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -48,7 +48,7 @@
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Atendimento</a>
                     </li>
                     <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Procedimentos</a>
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/procedimentos">Procedimentos</a>
                     </li>
                     <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina4">Produtos Home Care</a>
