Crud cadastrar cliente

--- a/estetilab/src/main/resources/templates/fragments/navbar.html
+++ b/estetilab/src/main/resources/templates/fragments/navbar.html
@@ -33,10 +33,10 @@
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/">Home</a>
                     </li>
                     <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina1">Cadastro</a>
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/cadastrarcliente">Cadastro</a>
                     </li>
                     <li class="nav-item nav-link">
-                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina2">Clientes</a>
+                        <a class="nav-link btn rosa btn-lg text-white m-0" href="/editarcliente">Clientes</a>
                     </li>
                     <li class="nav-item nav-link">
                         <a class="nav-link btn rosa btn-lg text-white m-0" href="/pagina3">Agendamentos</a>
