--- a/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/add.html
+++ b/estetilab/src/main/resources/templates/CRUD-cadastrarClientes/add.html
@@ -5,7 +5,7 @@
     <main th:fragment="conteudo">
  <div id="main" class="container">
             <h1 class="h1cadCliente">Cadastro de Clientes</h1>
-            <form>
+            <form class="formulárioAddClinente">
 
                 <div class="form-group">
                     <label for="nome">Nome completo</label>
